Fixing footer overflow issues

--- a/fe/src/app/app.component.scss
+++ b/fe/src/app/app.component.scss
@@ -18,17 +18,12 @@
   }
 }
 
-.footer_normal {
-  background-color: rgb(74, 78, 80);
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  span {
-    color: white;
-  }
+.main-content {
+  height: 100%;
+  overflow: auto;
 }
 
-.footer_small {
+.footer {
   background-color: rgb(74, 78, 80);
   position: relative;
   bottom: 0;
