--- a/fe/src/app/data-portal/details/details.component.scss
+++ b/fe/src/app/data-portal/details/details.component.scss
@@ -9,7 +9,6 @@
   mat-divider {
     margin: 10px;
   }
-  min-height: 85%;
 }
 
 a {
